modules/network/eip.tf

resource "aws_eip" "nat" {
  count = var.az_count
  tags  = var.global_tags
  vpc   = true
}
